codemp/generated/cgame/cg_event.h

const char *CG_PlaceString( int rank );
static void CG_Obituary( entityState_t *ent );
void CG_ToggleBinoculars( centity_t *cent, int forceZoom );
void CG_LocalTimingBar( int startTime, int duration );
static void CG_UseItem( centity_t *cent );
static void CG_ItemPickup( int itemNum );
void CG_PainEvent( centity_t *cent, int health );
void CG_ReattachLimb( centity_t *source );
const char *CG_TeamName( int team );
void CG_PrintCTFMessage( clientInfo_t *ci, const char *teamName, int ctfMessage );
void CG_GetCTFMessageEvent( entityState_t *es );
void DoFall( centity_t *cent, entityState_t *es, int clientNum );
int CG_InClientBitflags( entityState_t *ent, int client );
void CG_TryPlayCustomSound( vec3_t origin, int entityNum, int channel, const char *soundName );
void CG_G2MarkEvent( entityState_t *es );
void CG_CalcVehMuzzle( Vehicle_t *pVeh, centity_t *ent, int muzzleNum );
void CG_VehMuzzleFireFX( centity_t *veh, entityState_t *broadcaster );
const char *CG_GetStringForVoiceSound( const char *s );
void CG_EntityEvent( centity_t *cent, vec3_t position );
void CG_CheckEvents( centity_t *cent );